thêm controller server